myoperator/resources/crd-test.yaml
apiVersion: extensions.octoboy.com/v1
kind: Route
metadata:
  name: myroute
spec:
  version: "test"
